@@ -3,7 +3,7 @@
 ##### Step 1. Install some packages
 
 ```
-# eXistdb uses Java 7
+# eXistdb uses Java >=7
 $ sudo apt-get install openjdk-7-jre
 $ sudo apt-get install openjdk-7-jdk
 # this package is necessary to make queries
@@ -95,6 +95,8 @@ Installing the eXist-db Native XML Database daemon using init.d..
    /etc/rc5.d/S20eXist-db -> ../init.d/eXist-db
 
 $ sudo reboot
+# Or starting the service manually
+$ sudo java -Xmx1024M -Djava.endorsed.dirs=lib/endorsed -jar start.jar jetty
 ```
 
 ##### Step 5. Running the client.
